--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,6 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Programming 2
+description: >- # this means to ignore newlines until "baseurl:"
+  Programming 2 Companion Website
 baseurl: "/exercises" # the subpath of your site, e.g. /blog
 url: "ucll-pr2.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
